--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Meta tags for SEO -->
     <meta name="description" content="Peter Lightspeed - Professional Virtual Assistant, Web Developer & Graphic Designer offering website development, content creation, and digital marketing services.">
-    <meta name="keywords" content="virtual assistant, web developer, graphic designer, website development, digital marketing, freelancer, Nigeria">
+    <meta name="keywords" content="virtual assistant, web developer,cheap,cheap website, graphic designer, website development,free website, website template, free website template,cheap website for stores, affordable,affordable website, digital marketing, freelancer, Nigeria">
     <meta name="author" content="Peter Eluwade Toluwanimi">
     <meta name="robots" content="index, follow">
     
@@ -68,7 +68,7 @@
       "jobTitle": "Virtual Assistant & Web Developer",
       "url": "https://peterlight123.github.io/portfolio/",
       "sameAs": [
-        "https://x.com/peter8118533304",
+        "https://x.com/peterlightspeed",
         "https://www.instagram.com/eluwadepeter",
         "https://www.linkedin.com/in/peter-eluwade-5b8a73363/"
       ],
@@ -209,7 +209,7 @@
                         </div>
                         <div class="social-icons mt-4 d-flex gap-3">
                             <a href="https://www.linkedin.com/in/peter-eluwade-5b8a73363/" class="text-light fs-4" target="_blank" aria-label="LinkedIn Profile"><i class="bi bi-linkedin"></i></a>
-                            <a href="https://x.com/peter8118533304" class="text-light fs-4" target="_blank" aria-label="Twitter Profile"><i class="bi bi-twitter"></i></a>
+                            <a href="https://x.com/peterlightspeed" class="text-light fs-4" target="_blank" aria-label="Twitter Profile"><i class="bi bi-twitter"></i></a>
                             <a href="https://www.instagram.com/eluwadepeter" class="text-light fs-4" target="_blank" aria-label="Instagram Profile"><i class="bi bi-instagram"></i></a>
                             <a href="https://www.youtube.com/@petereluwade" class="text-light fs-4" target="_blank" aria-label="YouTube Channel"><i class="bi bi-youtube"></i></a>
                             <a href="https://www.tiktok.com/@eluwadepeter" class="text-light fs-4" target="_blank" aria-label="TikTok Profile"><i class="bi bi-tiktok"></i></a>
@@ -900,7 +900,7 @@
                         <h6 class="fw-semibold mb-3 text-white">Follow Me</h6>
                         <div class="social-links">
                             <a class="social-icon twitter" 
-                               href="https://x.com/peter8118533304" 
+                               href="https://x.com/peterlightspeed" 
                                target="_blank" 
                                title="Follow me on Twitter"
                                data-bs-toggle="tooltip">
@@ -1225,7 +1225,7 @@
             </button>
         </div>
         <div class="social-links-sidebar">
-            <a href="https://x.com/peter8118533304" target="_blank" rel="noopener" class="social-link twitter">
+            <a href="https://x.com/peterlightspeed" target="_blank" rel="noopener" class="social-link twitter">
                 <i class="bi bi-twitter"></i>
                 <span>Twitter</span>
             </a>
@@ -1268,6 +1268,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
