--- a/about.html
+++ b/about.html
@@ -826,7 +826,7 @@
                         <h6 class="fw-semibold mb-3 text-white">Follow Me</h6>
                         <div class="social-links">
                             <a class="social-icon twitter" 
-                               href="https://x.com/peter8118533304" 
+                               href="https://x.com/peterlightspeed" 
                                target="_blank" 
                                title="Follow me on Twitter"
                                data-bs-toggle="tooltip">
@@ -1025,7 +1025,7 @@
             </button>
         </div>
         <div class="social-links-sidebar">
-            <a href="https://x.com/peter8118533304" target="_blank" rel="noopener" class="social-link twitter">
+            <a href="https://x.com/peterlightspeed" target="_blank" rel="noopener" class="social-link twitter">
                 <i class="bi bi-twitter"></i>
                 <span>Twitter</span>
             </a>
@@ -1068,6 +1068,7 @@
 
 </body>
 </html>
+
 
 
 
