--- a/certifications.html
+++ b/certifications.html
@@ -1000,7 +1000,7 @@
                         <h6 class="fw-semibold mb-3 text-white">Follow Me</h6>
                         <div class="social-links">
                             <a class="social-icon twitter" 
-                               href="https://x.com/peter8118533304" 
+                               href="https://x.com/peterlightspeed" 
                                target="_blank" 
                                title="Follow me on Twitter"
                                data-bs-toggle="tooltip">
@@ -1191,6 +1191,7 @@
 
 </body>
 </html>
+
 
 
 
