--- a/contact.html
+++ b/contact.html
@@ -676,7 +676,7 @@
                 <p class="mb-5 col-lg-8 mx-auto" data-aos="fade-up">Follow me on social media to stay updated with my latest projects, tips, and insights.</p>
                 
                 <div class="social-grid" data-aos="fade-up">
-                    <a href="https://x.com/peter8118533304" target="_blank" class="social-grid-item twitter">
+                    <a href="https://x.com/peterlightspeed" target="_blank" class="social-grid-item twitter">
                         <i class="bi bi-twitter"></i>
                         <span>Twitter</span>
                     </a>
@@ -873,7 +873,7 @@
                         <h6 class="fw-semibold mb-3 text-white">Follow Me</h6>
                         <div class="social-links">
                             <a class="social-icon twitter" 
-                               href="https://x.com/peter8118533304" 
+                               href="https://x.com/peterlightspeed" 
                                target="_blank" 
                                title="Follow me on Twitter"
                                data-bs-toggle="tooltip">
@@ -1064,6 +1064,7 @@
 
 </body>
 </html>
+
 
 
 
