--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-7 col-md-6 hero-content" data-aos="fade-right">
                         <h1 class="display-4 fw-bold mb-3 text-white">Hi, I'm <span class="text-danger">Eluwade Peter</span></h1>
-                        <h2 class="h3 text-light mb-4 fw-light">Web Developer & Content Specialist</h2>
-                        <p class="lead mb-4 text-light">I build modern websites for businesses, vendors, and stores that want to grow online. I also handle content management and creative services. <strong class="text-warning">You can also call me Peter Lightspeed</strong></p>
+                        <h2 class="h3 text-light mb-4 fw-light">Front-End & AI-Powered Web Developer</h2>
+                        <p class="lead mb-4 text-light">I design and develop responsive, data-driven websites that blend creativity with intelligent technology. From blogs and portfolios to AI-integrated projects, I help brands grow online through clean UI, SEO, and smart automation.<strong class="text-warning">You can also call me Peter Lightspeed</strong></p>
                         <div class="hero-buttons">
                             <a href="contact.html" class="btn btn-danger btn-lg me-2 mb-2 mb-md-0">
                                 <i class="bi bi-envelope-fill me-2"></i>Hire Me!
@@ -1268,6 +1268,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
