--- a/index.html
+++ b/index.html
@@ -640,9 +640,7 @@
                             
                             <div class="intro-text mb-4">
                                 <p class="lead">
-                                    I'm <strong>Eluwade Peter Toluwanimi</strong>, a certified Website developer and 
-                                    digital solutions specialist with a passion for helping businesses and individuals 
-                                    achieve their online goals.
+                                    I'm <strong>Eluwade Peter Toluwanimi</strong>, a certified Front-End & AI-Powered Web Developer with a passion for creating responsive, data-driven websites and digital solutions that help businesses and individuals grow online.
                                 </p>
                             </div>
                             
@@ -1266,6 +1264,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
