--- a/index.html
+++ b/index.html
@@ -856,6 +856,12 @@
                                 <i class="bi bi-megaphone me-2"></i>Digital Marketing
                             </a>
                         </li>
+                        <li class="mb-2">
+                            <a class="footer-link" href="services.html#ai-web-solutions">
+                                <i class="bi bi-cpu me-2"></i>AI & Web Solutions
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
 
@@ -1264,6 +1270,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
