--- a/about.html
+++ b/about.html
@@ -670,8 +670,7 @@
                             Peter Lightspeed 
                         </h4>
                         <p class="mb-3 text-white"> 
-                            Your trusted partner for professional virtual assistant services. 
-                            Delivering quality digital solutions with lightning speed and precision.
+                            Your trusted partner for smart web development and digital solutions delivering quality, speed, and precision powered by creativity and AI.
                         </p>
                         
                         <!-- Quick Stats -->
@@ -786,6 +785,12 @@
                                 <i class="bi bi-megaphone me-2"></i>Digital Marketing
                             </a>
                         </li>
+                        <li class="mb-2">
+                            <a class="footer-link" href="services.html#ai-web-solutions">
+                                <i class="bi bi-cpu me-2"></i>AI & Web Solutions
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
 
@@ -1068,6 +1073,7 @@
 
 </body>
 </html>
+
 
 
 
