--- a/services.html
+++ b/services.html
@@ -233,6 +233,22 @@
                             <a href="contact.html?service=Data%20Entry" class="btn btn-outline-secondary mt-auto">Get a Quote</a>
                         </div>
                     </div>
+                    <!-- AI & Web Content Development -->
+                    <div class="col-md-6 col-lg-4" data-aos="fade-up" id="content-creation">
+                        <div class="service-card h-100">
+                            <div class="service-icon text-warning"><i class="bi bi-cpu"></i></div>
+                            <h3 class="h4">AI & Web Content Development</h3>
+                            <p>Creating intelligent, SEO-optimized content and web copy that blends creativity with automation tools — perfect for blogs, portfolios, and digital brands.</p>
+                            <ul class="list-unstyled service-features">
+                                <li><i class="bi bi-check-circle-fill text-success"></i> AI-Assisted Content Creation</li>
+                                <li><i class="bi bi-check-circle-fill text-success"></i> SEO Blog & Web Copywriting</li>
+                                <li><i class="bi bi-check-circle-fill text-success"></i> Automated Writing Tools Integration</li>
+                                <li><i class="bi bi-check-circle-fill text-success"></i> Digital Branding Content</li>
+                            </ul>
+                            <a href="contact.html?service=AI%20Web%20Content%20Development" class="btn btn-outline-warning mt-auto">Get a Quote</a>
+                        </div>
+                    </div>
+
                     <!-- Digital Marketing -->
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200" id="digital-marketing">
                         <div class="service-card h-100">
@@ -533,7 +549,7 @@
                         <h6 class="fw-semibold mb-3 text-white">Follow Me</h6>
                         <div class="social-links">
                             <a class="social-icon twitter" 
-                               href="https://x.com/peter8118533304" 
+                               href="https://x.com/peterlightspeed" 
                                target="_blank" 
                                title="Follow me on Twitter"
                                data-bs-toggle="tooltip">
@@ -725,6 +741,7 @@
 
 </body>
 </html>
+
 
 
 
