--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.htm">View Live Demos</a>
+                        </li>
                         
                         <!-- Dropdown Menu -->
                         <li class="nav-item dropdown">
@@ -1270,6 +1273,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
