--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <a class="nav-link px-3" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="demo.htm">View Live Demos</a>
+                            <a class="nav-link px-3" href="demo.html">View Live Demos</a>
                         </li>
                         
                         <!-- Dropdown Menu -->
@@ -1273,6 +1273,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
