--- a/projects.html
+++ b/projects.html
@@ -250,7 +250,10 @@
                                     <span class="tech-badge">Bootstrap</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
-                                    <a href="#" class="btn btn-primary btn-sm disabled" target="_blank">Visit Site</a>
+                                    <a href="demo.html?project=ecommerce-store disabled" class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                    </a>
+                                    <!-- <a href="#" class="btn btn-primary btn-sm disabled" target="_blank">Visit Site</a> -->
                                     <small class="text-muted">In progress</small>
                                 </div>
                             </div>
@@ -272,7 +275,9 @@
                                     <span class="tech-badge">JavaScript</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
-                                    <a href="#" class="btn btn-primary btn-sm disabled" target="_blank">Live Demo</a>
+                                    <a href="demo.html?project=hospital" class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                    </a>
                                     <small class="text-muted">In progress</small>
                                 </div>
                             </div>
@@ -293,7 +298,10 @@
                                     <span class="tech-badge">JavaScript</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
-                                    <a href="https://peterlight123.github.io/website3" class="btn btn-primary btn-sm" target="_blank">View Demo</a>
+                                    <a href="demo.html?project=website3" class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                    </a>
+                                    <!-- <a href="https://peterlight123.github.io/website3" class="btn btn-primary btn-sm" target="_blank">View Demo</a> -->
                                     <small class="text-muted">Completed</small>
                                 </div>
                             </div>
@@ -315,7 +323,10 @@
                                     <span class="tech-badge">Formspree</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
-                                    <a href="https://peterlight123.github.io/formspree/" class="btn btn-primary btn-sm" target="_blank">Visit Site</a>
+                                    <a href="demo.html?project=contact" class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                    </a>
+                                    <!-- <a href="https://peterlight123.github.io/formspree/" class="btn btn-primary btn-sm" target="_blank">Visit Site</a> -->
                                     <small class="text-muted">Completed</small>
                                 </div>
                             </div>
@@ -336,7 +347,10 @@
                                     <span class="tech-badge">Content Writing</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
-                                    <a href="https://plsworldnews.com" class="btn btn-primary btn-sm" target="_blank">Visit Site</a>
+                                    <a href="demo.html?project=ecommerce-store" class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                    </a>
+                                    <!-- <a href="https://plsworldnews.com" class="btn btn-primary btn-sm" target="_blank">Visit Site</a> -->
                                     <small class="text-muted">Active Project</small>
                                 </div>
                             </div>
@@ -379,7 +393,10 @@
                                     <span class="tech-badge">JavaScript</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
-                                    <a href="https://peterlight123.github.io/portfolio/" class="btn btn-primary btn-sm" target="_blank">View Project</a>
+                                    <a href="demo.html?project=portfolio class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                    </a>
+                                    <!-- <a href="https://peterlight123.github.io/portfolio/" class="btn btn-primary btn-sm" target="_blank">View Project</a> -->
                                     <small class="text-muted">Current Project</small>
                                 </div>
                             </div>
@@ -443,7 +460,10 @@
                                     <span class="tech-badge">JavaScript</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
-                                    <a href="https://peterlight123.github.io/freedomreign/" class="btn btn-primary btn-sm" target="_blank">View Project</a>
+                                    <a href="demo.html?project=basketball class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                    </a>
+                                    <!-- <a href="https://peterlight123.github.io/freedomreign/" class="btn btn-primary btn-sm" target="_blank">View Project</a> -->
                                     <small class="text-muted">Ongoing Project</small>
                                 </div>
                             </div>
@@ -1036,6 +1056,7 @@
 </body>
 </html>
         
+
 
 
 
