--- a/projects.html
+++ b/projects.html
@@ -96,6 +96,9 @@
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Demos</a>
+                        </li>
                         
                         <!-- Dropdown Menu -->
                         <li class="nav-item dropdown">
@@ -251,7 +254,7 @@
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
                                     <a href="demo.html?project=ecommerce-store disabled" class="btn btn-primary btn-sm me-2">
-                                        <i class="bi bi-play-circle me-1"></i>View Demo
+                                        <i class="bi bi-play-circle me-1 disabled"></i>View Demo
                                     </a>
                                     <!-- <a href="#" class="btn btn-primary btn-sm disabled" target="_blank">Visit Site</a> -->
                                     <small class="text-muted">In progress</small>
@@ -1056,6 +1059,7 @@
 </body>
 </html>
         
+
 
 
 
