--- a/testimonials.html
+++ b/testimonials.html
@@ -96,6 +96,9 @@
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Deoms</a>
+                        </li>
                         
                         <!-- Dropdown Menu -->
                         <li class="nav-item dropdown">
@@ -1036,6 +1039,7 @@
 
 </body>
 </html>
+
 
 
 
