--- a/about.html
+++ b/about.html
@@ -96,6 +96,9 @@
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Deoms</a>
+                        </li>
                         
                         <!-- Dropdown Menu -->
                         <li class="nav-item dropdown">
@@ -157,17 +160,18 @@
         <section class="py-5 bg-primary text-white about-header">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-                        <h1 class="display-4 fw-bold mb-3">About Me</h1>
-                        <p class="lead">I'm Peter Eluwade Toluwanimi, a dedicated virtual assistant with a passion for delivering exceptional digital solutions.</p>
-                        <p>With expertise in web development, graphic design, and content creation, I help businesses and individuals establish a strong online presence and streamline their operations.</p>
-                        <div class="d-flex mt-4">
-                            <a href="contact.html" class="btn btn-light text-primary me-3">
-                                <i class="bi bi-chat-dots-fill me-2"></i>Let's Talk
-                            </a> 
-                            <a href="cv.html" class="btn btn-outline-light">
-                                <i class="bi bi-file-earmark-pdf-fill me-2"></i>Download CV
-                            </a>
+                        <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
+                            <h1 class="display-4 fw-bold mb-3">About Me</h1>
+                            <p class="lead">I'm Eluwade Peter Toluwanimi, a front-end and AI-powered web developer passionate about building smart, responsive, and user-focused digital solutions.</p>
+                            <p>I specialize in web development, content creation, and virtual assistance — helping brands, businesses, and creators grow their online presence through clean design, functional interfaces, and SEO-driven strategies. Every project I take on is built for both beauty and performance.</p>
+                            <div class="d-flex mt-4">
+                                <a href="contact.html" class="btn btn-light text-primary me-3">
+                                    <i class="bi bi-chat-dots-fill me-2"></i>Let's Talk
+                                </a> 
+                                <a href="cv.html" class="btn btn-outline-light">
+                                    <i class="bi bi-file-earmark-pdf-fill me-2"></i>Download CV
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center" data-aos="fade-left">
@@ -1073,6 +1077,7 @@
 
 </body>
 </html>
+
 
 
 
