--- a/projects.html
+++ b/projects.html
@@ -120,6 +120,9 @@
                                 <li><a class="dropdown-item" href="cv.html">
                                     <i class="bi bi-file-earmark-pdf-fill me-2 text-danger"></i>Download CV
                                 </a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link px-3" href="demo.html">View Live Demos</a>
+                                </li>
                             </ul>
                         </li>
                         
@@ -867,7 +870,7 @@
                         <h6 class="fw-semibold mb-3 text-white">Follow Me</h6>
                         <div class="social-links">
                             <a class="social-icon twitter" 
-                               href="https://x.com/peter8118533304" 
+                               href="https://x.com/peterlightspeed" 
                                target="_blank" 
                                title="Follow me on Twitter"
                                data-bs-toggle="tooltip">
@@ -1059,6 +1062,7 @@
 </body>
 </html>
         
+
 
 
 
