--- a/projects.html
+++ b/projects.html
@@ -826,8 +826,8 @@
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a class="footer-link" href="services.html#digital-marketing">
-                                <i class="bi bi-megaphone me-2"></i>Digital Marketing
+                            <a class="footer-link" href="services.html#ai-web-solutions">
+                                <i class="bi bi-cpu me-2"></i>AI & Web Solutions
                             </a>
                         </li>
                     </ul>
@@ -989,7 +989,7 @@
                     <h5 class="modal-title">Terms of Service</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-                                <div class="modal-body">
+                  <div class="modal-body">
                     <h6>Service Agreement</h6>
                     <p>By hiring my services, you agree to these terms and conditions.</p>
                     
@@ -1062,6 +1062,7 @@
 </body>
 </html>
         
+
 
 
 
