--- a/services.html
+++ b/services.html
@@ -245,7 +245,7 @@
                                 <li><i class="bi bi-check-circle-fill text-success"></i> Automated Writing Tools Integration</li>
                                 <li><i class="bi bi-check-circle-fill text-success"></i> Digital Branding Content</li>
                             </ul>
-                            <a href="contact.html?service=AI%20Web%20Content%20Development" class="btn btn-outline-warning mt-auto">Get a Quote</a>
+                            <a href="contact.html?service=Development" class="btn btn-outline-warning mt-auto">Get a Quote</a>
                         </div>
                     </div>
 
@@ -792,6 +792,7 @@
 
 </body>
 </html>
+
 
 
 
