--- a/contact.html
+++ b/contact.html
@@ -341,6 +341,7 @@
                                     <option value="" selected disabled>Select your main service</option>
                                     <option value="Complete Website Development">🌐 Complete Website Development</option>
                                     <option value="Web Application Development">💻 Web Application Development</option>
+                                    <option value="Development">AI & Web Content Development</option>
                                     <option value="E-commerce Website">🛒 E-commerce Website</option>
                                     <option value="Mobile App Development">📱 Mobile App Development</option>
                                     <option value="Logo Design & Branding">🎨 Logo Design & Branding</option>
@@ -1064,6 +1065,7 @@
 
 </body>
 </html>
+
 
 
 
