--- a/services.html
+++ b/services.html
@@ -408,7 +408,7 @@
                                 </div>
                                 <div class="col-4">
                                     <div class="stat-item">
-                                        <h6 class="fw-bold text-success mb-0">100%</h6>
+                                        <h6 class="fw-bold text-success mb-0">95%</h6>
                                         <small class=" text-light">Satisfied</small>
                                     </div>
                                 </div>
@@ -507,6 +507,11 @@
                         <li class="mb-2">
                             <a class="footer-link" href="services.html#digital-marketing">
                                 <i class="bi bi-megaphone me-2"></i>Digital Marketing
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a class="footer-link" href="services.html#ai-web-solutions">
+                                <i class="bi bi-cpu me-2"></i>AI & Web Solutions
                             </a>
                         </li>
                     </ul>
@@ -792,6 +797,7 @@
 
 </body>
 </html>
+
 
 
 
