--- a/sponsor.html
+++ b/sponsor.html
@@ -1058,7 +1058,7 @@
                                 </div>
                                 <div class="col-4">
                                     <div class="stat-item">
-                                        <h6 class="fw-bold text-success mb-0">100%</h6>
+                                        <h6 class="fw-bold text-success mb-0">95%</h6>
                                         <small class=" text-light">Satisfied</small>
                                     </div>
                                 </div>
@@ -1120,6 +1120,11 @@
                         <li class="mb-2">
                             <a class="footer-link" href="contact.html">
                                 <i class="bi bi-envelope me-2"></i>Contact
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a class="footer-link" href="services.html#ai-web-solutions">
+                                <i class="bi bi-cpu me-2"></i>AI & Web Solutions
                             </a>
                         </li>
                     </ul>
@@ -1871,5 +1876,6 @@
 
 </body>
 </html>
+
 
 
