--- a/about.html
+++ b/about.html
@@ -291,6 +291,17 @@
                                 </div>
                             </div>
                             
+                            <!-- AI Web Solutions -->
+                    <div class="skill-item mb-4">
+                        <div class="d-flex justify-content-between mb-1">
+                            <span class="skill-name">AI Web Solutions</span>
+                            <span class="skill-percentage">95%</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-primary" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
                             <!-- SEO -->
                             <div class="skill-item">
                                 <div class="d-flex justify-content-between mb-1">
@@ -1080,6 +1091,7 @@
 
 </body>
 </html>
+
 
 
 
