--- a/projects.html
+++ b/projects.html
@@ -714,8 +714,7 @@
                             Peter Lightspeed 
                         </h4>
                         <p class="mb-3 text-white"> 
-                            Your trusted partner for professional virtual assistant services. 
-                            Delivering quality digital solutions with lightning speed and precision.
+                        Your trusted partner for smart web development and digital solutions delivering quality, speed, and precision powered by creativity and AI.
                         </p>
                         
                         <!-- Quick Stats -->
@@ -1062,6 +1061,7 @@
 </body>
 </html>
         
+
 
 
 
