--- a/certifications.html
+++ b/certifications.html
@@ -844,8 +844,7 @@
                             Peter Lightspeed 
                         </h4>
                         <p class="mb-3 text-white"> 
-                            Your trusted partner for professional virtual assistant services. 
-                            Delivering quality digital solutions with lightning speed and precision.
+                        Your trusted partner for smart web development and digital solutions delivering quality, speed, and precision powered by creativity and AI.
                         </p>
                         
                         <!-- Quick Stats -->
@@ -1196,6 +1195,7 @@
 
 </body>
 </html>
+
 
 
 
