--- a/demo.html
+++ b/demo.html
@@ -435,9 +435,8 @@
                             <i class="bi bi-lightning-charge text-warning me-2"></i>
                             Peter Lightspeed
                         </h4>
-                        <p class="mb-3 text-light">
-                            Your trusted partner for professional virtual assistant services. 
-                            Delivering quality digital solutions with lightning speed and precision.
+                            <p class="mb-3 text-light">
+                            Your trusted partner for smart web development and digital solutions delivering quality, speed, and precision powered by creativity and AI.
                         </p>
                         
                         <!-- Quick Stats -->
