--- a/services.html
+++ b/services.html
@@ -393,8 +393,7 @@
                             Peter Lightspeed 
                         </h4>
                         <p class="mb-3 text-white"> 
-                            Your trusted partner for professional virtual assistant services. 
-                            Delivering quality digital solutions with lightning speed and precision.
+                        Your trusted partner for smart web development and digital solutions delivering quality, speed, and precision powered by creativity and AI.
                         </p>
                         
                         <!-- Quick Stats -->
@@ -797,6 +796,7 @@
 
 </body>
 </html>
+
 
 
 
