--- a/index.html
+++ b/index.html
@@ -743,8 +743,7 @@
                             Peter Lightspeed
                         </h4>
                         <p class="mb-3 text-light">
-                            Your trusted partner for professional virtual assistant services. 
-                            Delivering quality digital solutions with lightning speed and precision.
+                        Your trusted partner for smart web development and digital solutions delivering quality, speed, and precision powered by creativity and AI.
                         </p>
                         
                         <!-- Quick Stats -->
@@ -1273,6 +1272,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
