--- a/certifications.html
+++ b/certifications.html
@@ -98,6 +98,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Demos</a>
                         </li>
                         
                         <!-- Dropdown Menu -->
@@ -1195,6 +1198,7 @@
 
 </body>
 </html>
+
 
 
 
