--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="about.html">About</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Demos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3 active" href="contact.html" aria-current="page">Contact</a>
@@ -1069,6 +1072,7 @@
 
 </body>
 </html>
+
 
 
 
