Update print statement from 'Hello' to 'Goodbye'

--- a/cv.html
+++ b/cv.html
@@ -92,6 +92,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="about.html">About</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Demos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
@@ -795,6 +798,7 @@
 
 </body>
 </html>
+
 
 
 
