--- a/sponsor.html
+++ b/sponsor.html
@@ -346,6 +346,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="about.html">About</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Demos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
@@ -1876,6 +1879,7 @@
 
 </body>
 </html>
+
 
 
 
