--- a/services.html
+++ b/services.html
@@ -95,6 +95,9 @@
                         </li>                        
                         <li class="nav-item">
                             <a class="nav-link px-3" href="demo.html">View Live Demos</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="demo.html">View Live Demos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
@@ -799,6 +802,7 @@
 
 </body>
 </html>
+
 
 
 
