--- a/testimonials.html
+++ b/testimonials.html
@@ -271,8 +271,34 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Testimonial 5-->
+                    <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                        <div class="testimonial-card">
+                            <div class="testimonial-rating">
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                            </div>
+                            <div class="testimonial-content">
+                                <p>"Peter is an amazing web development instructor! His lessons were clear, practical, and easy to follow. He helped me understand HTML, CSS, and JavaScript in a way that truly boosted my confidence. I’m really grateful for his patience, guidance, and passion for teaching."</p>
+                            </div>
+                            <div class="testimonial-author">
+                                <img src="images/testimonials/sinachi.jpeg" alt="Sinachi" class="testimonial-avatar">
+                                <div>
+                                    <h4>Sinachi Franklin Ezeonyeka</h4>
+                                    <p>Camex Global Concept-Student</p>
+                                </div>
+                            </div>
+                            <div class="testimonial-service">
+                                <span class="badge bg-secondary">Website development</span>
+                            </div>
+                        </div>
+                    </div>
                       
-                    <!-- Testimonial 5 -->
+                    <!-- Testimonial 6-->
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="testimonial-card">
                             <div class="testimonial-rating">
@@ -288,7 +314,7 @@
                             <div class="testimonial-author">
                                 <img src="images/testimonials/munachi.jpg" alt="Munachi" class="testimonial-avatar">
                                 <div>
-                                    <h4>munachi</h4>
+                                    <h4>Camex Global Concept-munachi</h4>
                                     <p>Student</p>
                                 </div>
                             </div>
@@ -298,7 +324,7 @@
                         </div>
                     </div>
                     
-                    <!-- Testimonial 6 -->
+                    <!-- Testimonial 7 -->
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="testimonial-card">
                             <div class="testimonial-rating">
@@ -1043,6 +1069,7 @@
 
 </body>
 </html>
+
 
 
 
