--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
   padding: 0.8rem 1rem;
   font-size: 0.95rem;
 }
+body{
+    overflow-x: hidden;
+}
 </style>
 </head>
 <body>
@@ -1272,6 +1275,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
