--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peter Lightspeed - Virtual Assistant Portfolio</title>
+    <title>Peter Lightspeed - AI Powered Web Developer Portfolio</title>
     
     <!-- Meta tags for SEO -->
     <meta name="description" content="Peter Lightspeed - Professional Virtual Assistant, Web Developer & Graphic Designer offering website development, content creation, and digital marketing services.">
@@ -1275,6 +1275,7 @@ body{
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
