--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peter Lightspeed - AI Powered Web Developer Portfolio</title>
+    <title>Peter Lightspeed - AI-Powered Web Developer Portfolio</title>
     
     <!-- Meta tags for SEO -->
     <meta name="description" content="Peter Lightspeed - Professional Virtual Assistant, Web Developer & Graphic Designer offering website development, content creation, and digital marketing services.">
@@ -94,19 +94,19 @@ html, body {
 
 /* Force all elements to stay within screen width */
 *,
-*::before,
+/* *::before,
 *::after {
   box-sizing: border-box !important;
   max-width: 100% !important;
-  word-wrap: break-word !important;
+  word-wrap: break-word !important; */
 }
 
 /* Make images and videos responsive */
-img, video {
+/* img, video {
   max-width: 100% !important;
   height: auto !important;
   display: block;
-}
+} */
 
 /* Keep layout clean but allow sidebar to show */
 .row, .container, .container-fluid, section {
@@ -1314,6 +1314,7 @@ img, video {
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
