--- a/404.html
+++ b/404.html
@@ -21,6 +21,33 @@
     <link rel="icon" type="image/png" href="images/logos/peter-logo.png">
     
     <style>
+        /* 🌐 Universal Mobile Responsiveness Fix */
+html, body {
+  max-width: 100%;
+  overflow-x: hidden !important;
+}
+
+/* Keep layout clean but allow sidebar to show */
+.row, .container, .container-fluid, section {
+  overflow-x: hidden !important;
+}
+
+/* Specifically allow sidebar overflow */
+.social-sidebar {
+  overflow-x: visible !important;
+}
+
+
+/* Responsive text scaling for small screens */
+@media (max-width: 768px) {
+  html {
+    font-size: 90%;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    word-break: break-word;
+
+
         .error-container {
             min-height: 80vh;
             display: flex;
@@ -105,7 +132,7 @@
             </button>
         </div>
         <div class="social-links-sidebar">
-            <a href="https://x.com/peter8118533304" target="_blank" rel="noopener" class="social-link twitter">
+            <a href="https://x.com/peterlightspeed" target="_blank" rel="noopener" class="social-link twitter">
                 <i class="bi bi-twitter"></i>
                 <span>Twitter</span>
             </a>
@@ -148,4 +175,5 @@
     <script src="/js/bot.js"></script>
 </body>
 </html>
+
 
