--- a/about.html
+++ b/about.html
@@ -1063,8 +1063,7 @@ html, body {
         if (localStorage.getItem('cookiesAccepted') === 'true') {
             gtag('config', 'G-PYGD6Z4GQD');
         }
-    </script>
-<!-- ===== SOCIAL MEDIA SIDEBAR ===== -->
+    </script><!-- ===== SOCIAL MEDIA SIDEBAR ===== -->
 <div class="social-sidebar">
     <div class="social-sidebar-toggle" id="socialToggle">
         <i class="bi bi-share-fill"></i>
@@ -1120,6 +1119,7 @@ html, body {
 
 </body>
 </html>
+
 
 
 
