--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ html, body {
                 </button>
                 
                 <!-- Navigation Links -->
-                <div class="collapse navbar-collapse" id="navbarMain">
+                <div class="collapse navbar-collapse sticky-top" id="navbarMain">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link px-3 active" href="index.html" aria-current="page">Home</a>
@@ -1298,6 +1298,7 @@ html, body {
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
