--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ html, body {
                         <div class="newsletter-signup">
                             <h6 class="text-uppercase fw-bold mb-3 text-warning">Stay Updated</h6>
                             <p class="mb-3 small">Subscribe to get notified about new projects and updates.</p>
-                            <form id="newsletterForm" action="https://formspree.io/f/meoljzde" method="POST">
+                            <form id="newsletterForm" action="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7387099061989974016" method="POST">
                                 <div class="input-group mb-3">
                                     <input type="email" name="email" class="form-control newsletter-input" id="newsletterEmail" 
                                            placeholder="Enter your email" required>
@@ -1298,6 +1298,7 @@ html, body {
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
