--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ html, body {
                 </button>
                 
                 <!-- Navigation Links -->
-                <div class="collapse navbar-collapse sticky-top" id="navbarMain">
+                <div class="collapse navbar-collapse" id="navbarMain">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link px-3 active" href="index.html" aria-current="page">Home</a>
@@ -800,7 +800,7 @@ html, body {
                         <div class="newsletter-signup">
                             <h6 class="text-uppercase fw-bold mb-3 text-warning">Stay Updated</h6>
                             <p class="mb-3 small">Subscribe to get notified about new projects and updates.</p>
-                            <form id="newsletterForm" action="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7387099061989974016" method="POST">
+                            <form id="newsletterForm" action="https://formspree.io/f/meoljzde" method="POST">
                                 <div class="input-group mb-3">
                                     <input type="email" name="email" class="form-control newsletter-input" id="newsletterEmail" 
                                            placeholder="Enter your email" required>
@@ -816,6 +816,11 @@ html, body {
                             <div id="newsletterMessage" class="mt-2" style="display: none;"></div>
                         </div>
                     </div>
+                    <a href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7387099061989974016" target="_blank" class="bg-primary text-light p-3 ">
+                      Subscribe to My LinkedIn Newsletter
+                    </a>
+                    
+
                 </div>
 
                 <!-- Quick Links -->
@@ -1298,9 +1303,6 @@ html, body {
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
-
-
-
 
 
 
